typed-i18n/tests/compile-fail/only_unit_fields.stderr
error: only unit field items are allowed
 --> tests/compile-fail/only_unit_fields.rs:7:5
  |
7 |     English(bool),
  |     ^^^^^^^
